finished most of the parts. Need to specify local hadoop, and yarn issues.